// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Article List Item items should render without margin 1`] = `
<DocumentFragment>
  <div
    class="css-niwyl0"
  >
    <div
      class="css-1kwj960"
    >
      <picture
        class="css-zp0elg"
      >
        <div
          class="css-5pczz7"
        />
        <img
          alt="This is ALT Text"
          class="css-1qgqq71"
          src="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F3c293bea-c74a-11ed-84e7-e2697ffed9a9.jpg?crop=2721%2C1531%2C216%2C63"
        />
      </picture>
    </div>
    <div
      class="css-diffbd"
    >
      <div
        class="css-13byt3y"
      >
        <a
          class="css-bxykrz"
          href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
          role="link"
        >
          <span
            class="css-17x5lw"
          >
            <span
              class="css-65zrxz"
            >
              Harry & Meghan's New Project?
            </span>
          </span>
        </a>
        <div
          class="css-1atazsr"
          data-testid="tag-and-flag"
        >
          <a
            class="css-10d4t8c"
            href="/"
          >
            <span
              class="css-17x5lw"
            >
              <span
                class="css-pwugga"
              >
                Review
              </span>
            </span>
          </a>
          <div
            class="css-lew009"
          >
            <hr
              aria-hidden="true"
              class="css-15kf7hd"
              data-testid="divider"
            />
          </div>
          <span
            class="css-64fvyz"
          >
            4 min read
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render Article List Item should render a snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1nw1nne"
  >
    <div
      class="css-1kwj960"
    >
      <picture
        class="css-zp0elg"
      >
        <div
          class="css-5pczz7"
        />
        <img
          alt="This is ALT Text"
          class="css-1qgqq71"
          src="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F3c293bea-c74a-11ed-84e7-e2697ffed9a9.jpg?crop=2721%2C1531%2C216%2C63"
        />
      </picture>
    </div>
    <div
      class="css-diffbd"
    >
      <p
        class="css-1khw599"
      >
        Credit
      </p>
      <a
        class="css-u57k3c"
        href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
        role="link"
      >
        <span
          class="css-17x5lw"
        >
          <span
            class="css-65zrxz"
          >
            Harry & Meghan's New Project?
          </span>
        </span>
      </a>
      <div
        class="css-1atazsr"
        data-testid="tag-and-flag"
      >
        <a
          class="css-10d4t8c"
          href="/"
        >
          <span
            class="css-17x5lw"
          >
            <span
              class="css-pwugga"
            >
              Review
            </span>
          </span>
        </a>
        <div
          class="css-lew009"
        >
          <hr
            aria-hidden="true"
            class="css-15kf7hd"
            data-testid="divider"
          />
        </div>
        <span
          class="css-64fvyz"
        >
          4 min read
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
